--- a/src/styles/font.css
+++ b/src/styles/font.css
@@ -1,5 +1,5 @@
 
- @font-face { font-display: swap; font-style : bold; src: url("assets/fonts/SourceSansProBold.ttf"); font-family : "Source Sans Pro"; font-weight : 700;  }
- @font-face { font-display: swap; font-style : normal; src: url("assets/fonts/SourceSansProRegular.ttf"); font-family : "Source Sans Pro"; font-weight : 400;  }
- @font-face { font-display: swap; font-style : bold; src: url("assets/fonts/NunitoExtraBold.ttf"); font-family : "Nunito"; font-weight : 800;  }
- @font-face { font-display: swap; font-style : bold; src: url("assets/fonts/SourceSansProSemiBold.ttf"); font-family : "Source Sans Pro"; font-weight : 600;  }
+ @font-face { font-display: swap; font-style : bold; src: url("assets/fonts/OpenSans_Condensed-Bold.ttf"); font-family: 'Open Sans', sans-serif; font-weight : 700;  }
+ @font-face { font-display: swap; font-style : normal; src: url("assets/fonts/OpenSans-Regular.ttf"); font-family: 'Open Sans', sans-serif; font-weight : 400;  }
+ @font-face { font-display: swap; font-style : bold; src: url("assets/fonts/OpenSans-ExtraBold.ttf"); font-family: 'Open Sans', sans-serif; font-weight : 800;  }
+ @font-face { font-display: swap; font-style : bold; src: url("assets/fonts/OpenSans-SemiBold.ttf"); font-family: 'Open Sans', sans-serif; font-weight : 600;  }
