--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -165,3 +165,37 @@ ul li a{
 .social-icon:not(:last-child) {
   margin-right: 10px;
 }
+
+.scroll-down {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  margin-left: -10px;
+  width: 20px;
+  height: 20px;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  animation: scroll 2s ease-in-out infinite;
+}
+
+.scroll-down span {
+  position: absolute;
+  top: calc(50% - 6px);
+  left: calc(50% - 3px);
+  border-left: 4px solid #fff;
+  border-bottom: 4px solid #fff;
+  transform: rotate(-45deg);
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
