--- a/src/pages/Homepage/Header.css
+++ b/src/pages/Homepage/Header.css
@@ -67,3 +67,27 @@
     color: black;
   }
   
+  .sidebar-item {
+    position: relative;
+  }
+  
+  .sidebar-item::before {
+    content: "";
+    position: absolute;
+    top: -25px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #333;
+    color: #fff;
+    padding: 4px 8px;
+    border-radius: 4px;
+    font-size: 14px;
+    white-space: nowrap;
+    opacity: 0; /* Hide the text initially */
+    transition: opacity 0.3s ease-in-out;
+  }
+  
+  .sidebar-item:hover::before {
+    opacity: 1; /* Show the text on hover */
+  }
+  
