--- a/src/styles/color.css
+++ b/src/styles/color.css
@@ -1,4 +1,4 @@
-:root { 
+/* :root { 
 --deep_orange_A100:#f5ab67; 
 --deep_purple_800:#3d349d; 
 --blue_A700:#2364ff; 
@@ -38,4 +38,4 @@
 --indigo_800:#20398d; 
 --cyan_400:#38b5c6; 
 --green_600_63:#27a95363; 
-}
+} */
