--- a/src/pages/Homepage/IntroWords.css
+++ b/src/pages/Homepage/IntroWords.css
@@ -4,48 +4,41 @@
   padding: 0 20px;
   position: relative;
   width: 100%;
-  background-color: aquamarine;
+  background-color: pink;
 }
-
 
 .intro-content {
   height: 100%;
-  margin: auto;
+  margin-left: 40%;
   right: 0;
-  width: 100%;
+  padding-left: 60px;
+  width: 55%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
-
 
 .intro-text {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  left: 0;
-  border-radius: 5px;
-  position: relative; /* Change from absolute to relative */
-  top: 10%;
-  width: 55%;
+  align-items: flex-end;
+  width: 100%;
+  padding-left: 60px;
 }
-
 
 .intro-heading {
   font-size: 80px;
   line-height: 1.25;
-  text-align: left;
+  text-align: right;
   color: #000;
   width: 100%;
 }
 
-.bold-text {
-  font-weight: bold;
-  color: #FF7F50;
-}
-
 .paragraph-container {
   margin-top: 25px;
-  margin-left: 3px;
+  margin-right: 10px;
   width: 73%;
+  text-align: right;
 }
 
 .intro-description {
@@ -56,37 +49,106 @@
   width: 100%;
 }
 
-.regular-text {
-  font-weight: normal;
-  color: #333333;
-}
-
 .intro-contact {
   line-height: 1.5;
-  text-align: left;
+  text-align: right;
   -webkit-font-smoothing: antialiased;
   visibility: visible;
   box-sizing: border-box;
-  background-color: transparent;
-  text-decoration: none!important;
-  color: var(--green-bright)!important;
+  text-decoration: none !important;
   font-weight: bolder;
-  font-family: "NTR",sans-serif;
-  padding: 10px 30px;
+  font-family: "NTR", sans-serif;
+  padding: 20px 40px;
+  margin-top: 40px;
+  text-align: center;
   cursor: pointer;
-  border: 1px solid var(--green-bright);
+  border: 2px solid;
   border-radius: 4px;
-  font-size: 16px;
-  align-self: center;
-  margin-left: 30%;
-  margin-top: 50px;
+  font-size: 20px;
+  background-color: transparent;
+  transition: background-color 0.3s ease-in-out;
+  position: relative;
 }
 
-.contact-icon {
+.intro-contact:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border: 2px solid transparent;
+  border-radius: 8px;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.intro-contact:hover:before {
+  opacity: 1;
+}
+
+.intro-contact:hover {
+  color: white !important;
+  animation: crazy 0.8s linear infinite;
+}
+
+@keyframes crazy {
+  0% {
+    transform: translate(0, 0);
+  }
+
+  20% {
+    transform: translate(-2px, -2px);
+  }
+
+  40% {
+    transform: translate(-2px, 2px);
+  }
+
+  60% {
+    transform: translate(2px, -2px);
+  }
+
+  80% {
+    transform: translate(2px, 2px);
+  }
+
+  100% {
+    transform: translate(0, 0);
+  }
+}
+
+.intro-contact .contact-text {
   vertical-align: middle;
 }
 
-.contact-text {
-  margin-left: 8px;
-  vertical-align: middle;
+@keyframes changeColor {
+  0% {
+    color: #FFFFFF;
+  }
+
+  20% {
+    color: #FF0000;
+  }
+
+  40% {
+    color: #00FF00;
+  }
+
+  60% {
+    color: #0000FF;
+  }
+
+  80% {
+    color: #FFFF00;
+  }
+
+  100% {
+    color: #FFFFFF;
+  }
+}
+
+
+.AnimatedText {
+  animation: changeColor 7s infinite;
 }
