Intro words layout

--- a/src/pages/Homepage/IntroWords.css
+++ b/src/pages/Homepage/IntroWords.css
@@ -9,9 +9,9 @@
 
 .intro-content {
   height: 100%;
-  margin-left: 40%;
+  margin-left: auto;
   right: 0;
-  padding-left: 60px;
+  padding-right: 60px;
   width: 55%;
   display: flex;
   justify-content: flex-end;
@@ -22,31 +22,52 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  width: 100%;
   padding-left: 60px;
 }
 
 .intro-heading {
-  font-size: 80px;
-  line-height: 1.25;
+  font-size: 50px;
   text-align: right;
   color: #000;
   width: 100%;
+  margin-top: 40px;
 }
 
 .paragraph-container {
-  margin-top: 25px;
+  margin-top: 40px;
   margin-right: 10px;
-  width: 73%;
+  margin-bottom: 10px;
+  width: 100%;
   text-align: right;
 }
 
 .intro-description {
+  margin-top: 40px;
   font-size: 35px;
   line-height: 1.43;
   font-style: normal;
   color: #000;
   width: 100%;
+  animation: fadeIn 1.5s ease-in-out 1.5s;
+  opacity: 0;
+  transform: translateY(20px);
+  animation: fadeIn 2s ease-in-out 1.5s forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.animated-passionate-text {
+  margin-top: 40px;
 }
 
 .intro-contact {
@@ -125,30 +146,39 @@
 @keyframes changeColor {
   0% {
     color: #FFFFFF;
+    /* White */
   }
 
   20% {
     color: #FF0000;
+    /* Red */
   }
 
   40% {
     color: #00FF00;
+    /* Green */
   }
 
   60% {
     color: #0000FF;
+    /* Blue */
   }
 
   80% {
     color: #FFFF00;
+    /* Yellow */
   }
 
   100% {
     color: #FFFFFF;
+    /* White */
   }
 }
 
-
 .AnimatedText {
   animation: changeColor 7s infinite;
+}
+
+.bold-text {
+  font-weight: bolder;
 }
