--- a/src/pages/Homepage/IntroWords.css
+++ b/src/pages/Homepage/IntroWords.css
@@ -17,7 +17,7 @@
 }
 
 .intro-text {
-  display: flex;
+  display: inline-flex;
   flex-direction: column;
   align-items: flex-end;
   padding-left: 60px;
@@ -27,8 +27,7 @@
   font-size: 50px;
   text-align: right;
   color: #000;
-  width: 100%;
-  margin-top: 40px;
+
 }
 
 .paragraph-container {
@@ -50,6 +49,7 @@
   opacity: 0;
   transform: translateY(20px);
   animation: fadeIn 2s ease-in-out 1.5s forwards;
+  min-height: 200px;
 }
 
 @keyframes fadeIn {
@@ -66,6 +66,7 @@
 
 .animated-passionate-text {
   margin-top: 40px;
+  height: 200px;
 }
 
 .intro-contact {
