--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -24,7 +24,7 @@ body {
   gap: 45px;
 }
 
-.intro-section .animation-container{
+.intro-section .animation-container {
   margin-right: 30px;
 }
 
@@ -246,13 +246,100 @@ body {
 }
 
 
-
 .about-me-section {
   background-color: blue;
   background-size: cover;
   background-position: center;
-  /* Additional styling for the about me section */
+  height: calc(60vh);
+  padding-left: 45px;
+  padding-right: 35px;
 }
+
+.about-me-section .fade-in-section.is-visible {
+  opacity: 1;
+  transform: none;
+  visibility: visible;
+}
+
+.about-me-section .fade-in-section {
+  opacity: 0;
+  transform: translateY(10vh);
+  visibility: hidden;
+  transition: opacity 0.6s ease-out, transform 1s ease-out;
+  will-change: opacity, visibility;
+}
+
+.about-me-section .section-header {
+  display: flex;
+  padding-bottom: 42px;
+  font-size: 50px;
+  font-weight: bolder;
+  width: 100vw;
+}
+
+.about-me-section .pointer {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.about-me-section .pointer::before {
+  content: "";
+  position: absolute;
+  top: -8px;
+  left: -8px;
+  width: 24px;
+  height: 24px;
+  background-color: yellow;
+  border-radius: 50%;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.about-me-section .pointer:hover::before {
+  opacity: 1;
+}
+
+
+.about-me-section .about-content {
+  display: flex;
+  flex-direction: row;
+}
+
+.about-me-section .about-description {
+  font-family: "NTR", sans-serif;
+  color: var(--slate);
+  max-width: 600px;
+  font-size: 22px;
+  text-align: justify;
+  margin: 0;
+}
+
+.about-me-section p {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+.about-me-section .about-description ul {
+  padding-top: 20px;
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: repeat(2, minmax(150px, 1fr));
+}
+
+.about-me-section .about-image {
+  padding-left: 40px;
+}
+
+.about-me-section .about-image img {
+  max-width: 300px;
+  height: auto;
+  border-radius: 10px;
+  margin-left: 30px;
+  box-shadow: 6px 13px 23px -5px rgba(0, 0, 0, 0.46);
+  border: none;
+}
+
 
 .experience-section {
   background-color: purple;
