--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -246,6 +246,116 @@ body {
 }
 
 
+.intro-section .name-content {
+  overflow: hidden;
+  font-size: 35px;
+  line-height: 40px;
+  color: #ecf0f1;
+}
+
+.intro-section .namecontent__container {
+  font-weight: 600;
+  overflow: hidden;
+  height: 43px;
+  padding: 0 40px;
+  position: relative;
+}
+
+.intro-section .namecontent__container:before {
+  content: '{';
+  left: 0;
+}
+
+.intro-section .namecontent__container:after {
+  content: '}';
+  position: absolute;
+  right: 0;
+}
+
+.intro-section .namecontent__container:before,
+.intro-section .namecontent__container:after {
+  position: absolute;
+  top: 0;
+  color: #16a085;
+  font-size: 42px;
+  line-height: 40px;
+  animation-name: opacity;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
+
+.intro-section .namecontent__container__text {
+  display: inline-flex;
+  float: left;
+  margin: 0;
+}
+
+.intro-section .namecontent__container__list {
+  margin-top: 0;
+  padding-left: 110px;
+  text-align: left;
+  list-style: none;
+  animation-name: change;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+}
+
+.intro-section .namecontent__container__list__item {
+  line-height: 40px;
+  margin: 0;
+}
+
+@keyframes opacity {
+
+  0%,
+  100% {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
+  }
+}
+
+@keyframes change {
+
+  0%,
+  12.66%,
+  100% {
+    transform: translate3d(0, 0, 0);
+  }
+
+  16.66%,
+  29.32% {
+    transform: translate3d(0, -25%, 0);
+  }
+
+  33.32%,
+  45.98% {
+    transform: translate3d(0, -50%, 0);
+  }
+
+  49.98%,
+  62.64% {
+    transform: translate3d(0, -75%, 0);
+  }
+
+  66.64%,
+  79.3% {
+    transform: translate3d(0, -50%, 0);
+  }
+
+  83.3%,
+  95.96% {
+    transform: translate3d(0, -25%, 0);
+  }
+}
+
+
+
+
+/* About Me Section */
+
 .about-me-section {
   background-color: blue;
   background-size: cover;
