--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -602,7 +602,7 @@ li:hover {
 .about-me-section .about-description {
   font-family: "NTR", sans-serif;
   color: var(--slate);
-  max-width: 600px;
+  max-width: 750px;
   font-size: 22px;
   text-align: justify;
   margin: 0;
@@ -668,6 +668,187 @@ li:hover {
 }
 
 
+/* About Me Timeline */
+
+.about-me-section .timeline {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  overflow-x: auto;
+  padding: 20px 0;
+  white-space: nowrap;
+}
+
+.about-me-section .timeline__items {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  list-style: none;
+  padding-left: 0;
+  position: relative;
+}
+
+.about-me-section .timeline__item {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 60px;
+  position: relative;
+}
+
+.about-me-section .timeline__item:before {
+  content: "";
+  position: absolute;
+  background-color: black;
+  left: -30px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 60px;
+  height: 2px;
+}
+
+.about-me-section .timeline__item:after {
+  content: "";
+  position: absolute;
+  background-color: black;
+  left: calc(50% - 5px);
+  top: 50%;
+  transform: translateX(-50%);
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+}
+
+.about-me-section .timeline__item ul{
+  display: flex;
+}
+
+.about-me-section .timeline__item:first-child:before {
+  display: none;
+}
+
+.about-me-section .timeline__item-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.about-me-section .timeline__item-title {
+  font-weight: bold;
+}
+
+.about-me-section .timeline__item-date {
+  color: grey;
+}
+
+/* .cd-horizontal-timeline {
+  width: 100%;
+  position: relative;
+}
+
+.timeline {
+  position: relative;
+  margin: 0 auto;
+  padding: 1em 0;
+}
+
+.events-wrapper {
+  position: relative;
+  height: 50px;
+}
+
+.events {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.events ol {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: start;
+}
+
+.events ol li {
+  position: relative;
+  z-index: 2;
+  text-align: center;
+  padding: 10px;
+  cursor: pointer;
+  white-space: nowrap;
+}
+
+.events ol li a {
+  text-decoration: none;
+  color: #000;
+}
+
+.events .selected {
+  font-weight: bold;
+  color: #ff7f50;
+}
+
+.filling-line {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background: #ff7f50;
+}
+
+.cd-timeline-navigation {
+  display: flex;
+  justify-content: space-between;
+}
+
+.cd-timeline-navigation li {
+  list-style: none;
+}
+
+.cd-timeline-navigation a {
+  text-decoration: none;
+  color: #000;
+}
+
+.events-content {
+  padding: 2em 0;
+}
+
+.events-content ol {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.events-content ol li {
+  display: none;
+  padding: 1em;
+}
+
+.events-content ol .selected {
+  display: block;
+}
+
+.timeline-title {
+  font-size: 1.5em;
+  margin-bottom: .5em;
+}
+
+.timeline-time {
+  color: #999;
+  font-size: .85em;
+  margin-bottom: 1em;
+}
+
+.timeline-text {
+  font-size: 1em;
+} */
+
+
+/* About Me Image */
 
 
 .about-me-section .about-image {
