--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -620,11 +620,14 @@ li:hover {
   grid-template-columns: repeat(2, minmax(150px, 1fr));
 }
 
+.about-me-section .lovetech-section{
+  margin-top: 60px;
+}
 
 .about-me-section .tech-stack {
   list-style: none;
   padding: 0;
-  margin: 0;
+  margin-top: 70px;
   display: flex;
 }
 
