--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -95,6 +95,9 @@ li:hover {
 }
 
 
+/* Intro Page */
+
+
 .intro-section {
   background-color: pink;
   background-size: cover;
@@ -455,19 +458,13 @@ li:hover {
 /* About Me Section */
 
 .about-me-section {
-  background-color: blue;
   background-size: cover;
   background-position: center;
-  height: calc(100vh);
+  height: calc(96vh);
   padding-left: 45px;
   padding-right: 35px;
 }
 
-.about-me-section .fade-in-section.is-visible {
-  opacity: 1;
-  transform: none;
-  visibility: visible;
-}
 
 .about-me-section .fade-in-section {
   opacity: 0;
@@ -475,6 +472,12 @@ li:hover {
   visibility: hidden;
   transition: opacity 0.6s ease-out, transform 1s ease-out;
   will-change: opacity, visibility;
+}
+
+.about-me-section .fade-in-section.is-visible {
+  opacity: 1;
+  transform: none;
+  visibility: visible;
 }
 
 .about-me-section .section-header {
@@ -745,111 +748,6 @@ li:hover {
 .about-me-section .timeline__item-date {
   color: grey;
 }
-
-/* .cd-horizontal-timeline {
-  width: 100%;
-  position: relative;
-}
-
-.timeline {
-  position: relative;
-  margin: 0 auto;
-  padding: 1em 0;
-}
-
-.events-wrapper {
-  position: relative;
-  height: 50px;
-}
-
-.events {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-
-.events ol {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  justify-content: start;
-}
-
-.events ol li {
-  position: relative;
-  z-index: 2;
-  text-align: center;
-  padding: 10px;
-  cursor: pointer;
-  white-space: nowrap;
-}
-
-.events ol li a {
-  text-decoration: none;
-  color: #000;
-}
-
-.events .selected {
-  font-weight: bold;
-  color: #ff7f50;
-}
-
-.filling-line {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 2px;
-  background: #ff7f50;
-}
-
-.cd-timeline-navigation {
-  display: flex;
-  justify-content: space-between;
-}
-
-.cd-timeline-navigation li {
-  list-style: none;
-}
-
-.cd-timeline-navigation a {
-  text-decoration: none;
-  color: #000;
-}
-
-.events-content {
-  padding: 2em 0;
-}
-
-.events-content ol {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.events-content ol li {
-  display: none;
-  padding: 1em;
-}
-
-.events-content ol .selected {
-  display: block;
-}
-
-.timeline-title {
-  font-size: 1.5em;
-  margin-bottom: .5em;
-}
-
-.timeline-time {
-  color: #999;
-  font-size: .85em;
-  margin-bottom: 1em;
-}
-
-.timeline-text {
-  font-size: 1em;
-} */
 
 
 /* About Me Image */
