--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -595,8 +595,6 @@ li:hover {
   animation-duration: 442ms;
 }
 
-
-
 .about-me-section .about-content {
   display: flex;
   flex-direction: row;
@@ -619,21 +617,20 @@ li:hover {
 .about-me-section .about-description ul {
   padding-top: 20px;
   list-style-type: none;
-  display: grid;
-  grid-template-columns: repeat(2, minmax(150px, 1fr));
 }
+
 
 .about-me-section .lovetech-section{
   margin-top: 150px;
 }
 
-.about-me-section .tech-stack {
-  list-style: none;
-  padding: 0;
-  margin-top: 5px;
-  margin-bottom: 15px;
-  display: flex;
+.about-me-section .about-description .tech-stack {
+  padding-top: 20px;
+  list-style-type: none;
+  display: grid; 
+  grid-template-columns: repeat(2, minmax(150px, 1fr));
 }
+
 
 .about-me-section .tech-stack li {
   display: flex;
