--- a/src/pages/Homepage/HorizontalTimeline.css
+++ b/src/pages/Homepage/HorizontalTimeline.css
@@ -82,6 +82,7 @@
   /* Show the circle marker after it's selected */
   &::after {
     bottom: calc(60% + 10px);
+    transition: bottom 0.5s ease-out;
     background-color: #F1C40F;
     opacity: 1;
     transform: scale(1);
