arrow icon bug resolved

--- a/src/pages/Homepage/HorizontalTimeline.css
+++ b/src/pages/Homepage/HorizontalTimeline.css
@@ -57,7 +57,7 @@
 }
 
 .timeline .events a::after {
-  /* circle marker */
+  /* circle marker for the horizontal timeline. */
   content: '';
   position: absolute;
   left: 50%;
@@ -182,7 +182,7 @@
 }
 
 .arrow-icon {
-  position: absolute;
+  display: initial;
   left: 0;
 }
 
