ParallaxSection affect applied to use later

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -98,11 +98,11 @@ li:hover {
 /* Intro Page */
 
 
-.intro-section {
+/* .intro-section {
   background-color: pink;
   background-size: cover;
   background-position: center;
-}
+} */
 
 
 .intro-section .section-container {
